molecule/resources/deployments/test-longhorn-rwo-step1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-longhorn-rwo-step1
  namespace: default
spec:
  containers:
    - name: step1
      image: busybox
      imagePullPolicy: IfNotPresent
      command:
        - "sh"
        - "-c"
        - "echo 'hello from step1' > /data/file"
      volumeMounts:
        - name: data
          mountPath: /data
  restartPolicy: Never
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-longhorn-rwo-pvc
---
