molecule/resources/deployments/test-longhorn-rwo-step2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-longhorn-rwo-step2
  namespace: default
spec:
  containers:
    - name: step2
      image: busybox
      imagePullPolicy: IfNotPresent
      command:
        - "sh"
        - "-c"
        - "cat /data/file"
      volumeMounts:
        - name: data
          mountPath: /data
  restartPolicy: Never
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-longhorn-rwo-pvc
---
