molecule/resources/deployments/test-traefik.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  containers:
    - name: whoami
      image: containous/whoami:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.homecloud.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
# curl -IkH host:whoami.home.cloud http://192.168.121.176:32080 -> HTTP/1.1 308 Permanent Redirect
# curl -IkH host:whoami.home.cloud https://192.168.121.176:32443 -> HTTP/2 200
